--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "lodash": "^4.17.4",
     "react-responsive-grid": "^0.3.4",
     "react-reveal": "^0.7.3",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "typeface-merriweather": "0.0.43",
+    "typeface-montserrat": "0.0.43"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
